--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,13 +1,15 @@
-
+.Header{
+    min-height: 210px;
+}
 .carousel {
-    max-height: 400px; /* Adjust the height as needed */
+    max-height: 400px; 
     margin-bottom: 230px;
   }
   
 .carousel img {
-    max-height: 600px; /* Set the maximum height to 100% of the carousel's height */
-    width: auto; /* Maintain aspect ratio */
-    margin: 0 auto; /* Center align the images horizontally */
+    max-height: 600px;
+    width: auto; 
+    margin: 0 auto; 
     margin-bottom: 2px;
 }
 
