--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -1,3 +1,7 @@
+.single-main{
+  min-height: 2700px ;
+  width: 100%;
+}
 .singlePost {
   flex: 9;
 }
@@ -8,12 +12,25 @@
   padding-right: 0;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: auto;
+  
+}
+.singlePostUpdateWrapper{
+  gap: 11px;
+  padding: 11px 20px;
+  padding-right: 0;
+  display: flex;
+  flex-direction: column;
+
 }
 .singleImgWrapper {
   gap: 11px;
   padding-right: 0;
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: auto;
 }
 
 .singlePostCats {
@@ -34,6 +51,7 @@
   line-height: 1.5;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   color: darkred;
+  min-height: 80px;
 }
 
 .singleRelated {
@@ -95,14 +113,6 @@ margin-left: 10px;
 cursor: pointer;
 }
 
-.singlePostIcon:first-child {
-color: teal;
-}
-
-.singlePostIcon:last-child {
-color: tomato;
-}
-
 .singlePostInfo {
   margin-bottom: 20px;
   display: flex;
@@ -120,6 +130,11 @@ color: tomato;
   user-select: none;
 }
 
+.desc-container{
+  width: 100%;
+  min-height: 1350px;
+}
+
 .singlePostDescInput {
   border: none;
   color: #666;
@@ -132,6 +147,7 @@ color: tomato;
 .descpara{
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .singlePostDescInput:focus {
@@ -163,8 +179,6 @@ outline: none;
 .singlePostLink:focus {
   outline: none;
   }
-
-  
   /* youtube place holder image */
   .singlePostVideoLink {
     position: relative;
