--- a/src/pages/ContactUs/Contact.css
+++ b/src/pages/ContactUs/Contact.css
@@ -13,6 +13,7 @@
   .contact-image img {
     width: 100%;
     height: auto;
+    margin-bottom: 61px;
   }
   
   .contact-details {
@@ -41,9 +42,9 @@
     margin-top: 20px;
   }
   
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
   .contact-container{
-    display: flex;
-    flex-direction: column;
+    flex-direction: column
+    /* flex-wrap: wrap; */
   }
 }
