--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -1,6 +1,7 @@
 .single-main{
-  min-height: 2700px ;
+  display: table-row;
   width: 100%;
+  height: 100%;
 }
 .singlePost {
   flex: 9;
@@ -132,7 +133,6 @@ cursor: pointer;
 
 .desc-container{
   width: 100%;
-  min-height: 1350px;
 }
 
 .singlePostDescInput {
