--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -1,9 +1,9 @@
 .settings {
     display: flex;
+    justify-content: center;
   }
   
 .settingsWrapper {
-  flex: 9;
   padding: 20px;
 }
 
@@ -30,32 +30,6 @@
   flex-direction: column;
 }
 
-.settingsPP {
-  display: flex;
-  align-items: center;
-  margin: 10px 0;
-}
-
-.settingsPP > img {
-  width: 70px;
-  height: 70px;
-  border-radius: 20px;
-  object-fit: cover;
-}
-
-.settingsPPIcon {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background-color: lightcoral;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 10px;
-  cursor: pointer;
-}
-
 .settingsForm > label {
   font-size: 20px;
   margin-top: 20px;
@@ -64,9 +38,11 @@
 .settingsForm > input {
   color: gray;
   margin: 10px 0;
-  height: 30px;
+  height: 40px;
   border: none;
   border-bottom: 1px solid lightgray;
+  border-radius: 10px;
+  padding: 8px;
 }
 
 .settingsSubmit{
@@ -81,10 +57,6 @@
     cursor: pointer;
 }
 
-.LogOut{
-  display: flex;
-  justify-content: center;
-}
 .settingsDelete{
   display: flex;
   width: 150px;
