--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -1,5 +1,4 @@
 .single-main{
-  display: table-row;
   width: 100%;
   height: 100%;
 }
@@ -16,14 +15,6 @@
   width: 100%;
   height: auto;
   
-}
-.singlePostUpdateWrapper{
-  gap: 11px;
-  padding: 11px 20px;
-  padding-right: 0;
-  display: flex;
-  flex-direction: column;
-
 }
 .singleImgWrapper {
   gap: 11px;
@@ -146,7 +137,7 @@ cursor: pointer;
 
 .descpara{
     display: flex;
-    justify-content: center;
+    padding-left: 29%;
     width: 100%;
 }
 
@@ -186,15 +177,15 @@ outline: none;
     justify-content: center;
     align-items: center;
     border-radius: 9px;
-    width: 540px;
+    width: 50%;
     box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
-    height: 320px;
+    height: 400px;
     margin-bottom: 20px;
   }
   
   .singlePostFrame{
-    height: 280px;
-    width: 500px;
+    height: 330px;
+    width: 89%;
     border-radius: 10px;
   }
   
@@ -220,7 +211,7 @@ outline: none;
 
 .relatedPostsContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, auto);
   grid-gap: 15px;
   margin: 16px 4px 16px 4px;
 }
@@ -274,8 +265,16 @@ outline: none;
   .related-post-image-title{
     width: 80%;
   }
+  .singlePostVideoLink{
+    width: 70%;
+  }
 }
 @media screen and (max-width: 560px) {
+
+  .descpara{
+    padding-left: 5%;
+  }
+
   .singlePostWrapper {
     padding: 10px;
   padding-right: 0;
@@ -321,12 +320,12 @@ outline: none;
 }
 
 .singlePostVideoLink {
-  width: 71%;
-  height: 202px;
+  width: 91%;
+  height: 247px;
 }
   .singlePostFrame{
-    height: 169px;
-    width: 88%;
+    height: 200px;
+    width: 89%;
     border-radius: 10px;
   }
 
