--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -85,6 +85,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 20px;
+    margin-top: 0;
     justify-content: center;
 }
 .post {
@@ -171,6 +172,10 @@
 
 .none{
   display: none;
+}
+
+.firstad{
+  margin-bottom: 22px;
 }
 
 @media screen and (max-width: 768px) {
