--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -286,6 +286,7 @@ outline: none;
   }
   .descpara{
     padding-left: 5%;
+    padding-right: 9px;
   }
 
   .singlePostWrapper {
@@ -295,6 +296,7 @@ outline: none;
   } 
   .singlePostTitle {
     font-size: 24px;
+    margin-right: 9px;
   }
 
   .singlePostTitleInput {
